--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <button type="button" class="btn btn-outline-light btn-lg download-btn"><i class="fab fa-google-play"></i>  Download </button>
         </div>
         <div class="col-lg-6">
-          <img class="title-img" src="images/iphone6.png" alt="iphone-mockup">
+          <img class="title-img" src="iphone6.png" alt="iphone-mockup">
       </div>
 
     </div>
@@ -121,10 +121,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-img" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-img" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-img" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-img" src="techcrunch.png" alt="tc-logo">
+    <img class="press-img" src="tnw.png" alt="tnw-logo">
+    <img class="press-img" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="press-img" src="mashable.png" alt="mashable-logo">
 
   </section>
 
